syntax = "proto3";

package server.profile;

import "shared/profile.proto";

message GetProfilesRequest {
  // If provided, returns results associated with the profile_ids.
  repeated int32 profile_ids = 1;

  // If provided, returns results associated with the account_ids.
  repeated int32 account_ids = 2;
}

message GetProfilesResponse {
  repeated shared.Profile profiles = 1;
}
